gitops/traefik/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service
  namespace: traefik
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service
  namespace: traefik
spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      name: web
      port: 80
    - targetPort: 443
      name: websecure
      port: 443
  selector:
    app: traefik
