gitops/traefik/traefik/traefik-dashboard-ingressroute-http.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-ingressroute-http
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`traefik.jed.local`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
    middlewares:
    - name: middleware-traefik-redirect-https
      namespace: traefik
